# kafka-enum

./: Cargo.toml  README.md
src/: generate_enum.rs  get_components.rs  lib.rs
tests/: attribute_test.rs
