[package]
name = "kafka_enum"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
proc-macro2 = "1.0.88"
quote = "1.0.37"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde_json = "1.0.132"
syn = { version = "2.0.81", features = ["extra-traits", "full"] }

[lib]
proc-macro = true
